--- a/public/result.html
+++ b/public/result.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Raspored trka</title>
+  <title>Rezultati trka</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2418/2418779.png" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -24,17 +24,17 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-3 fw-bold">
-          <li class="nav-item"><a class="nav-link active text-white" href="/index.html"><i class="fa-solid fa-film me-1"></i> Raspored trka</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/index.html"><i class="fa-solid fa-film me-1"></i> Raspored trka</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-user me-1"></i> Timovi</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="/driver.html"><i class="fa-solid fa-calendar-days me-1"></i> Vozači</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/result.html"><i class="fa-solid fa-ticket me-1"></i> Rezultati</a></li>
+          <li class="nav-item"><a class="nav-link active text-white" href="/result.html"><i class="fa-solid fa-ticket me-1"></i> Rezultati</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
   <div class="container">
-    <h1 class="display-4 fw-bold mb-4 text-center">Raspored trka F1 2025</h1>
+    <h1 class="display-4 fw-bold mb-4 text-center">Rezultati trka F1 2025</h1>
 
     <div class="card shadow">
       <div class="card-body">
@@ -43,14 +43,13 @@
             <thead class="table-dark">
               <tr>
                 <th>#</th>
-                <th>Naziv</th>
-                <th>Lokacija</th>
-                <th>Država</th>
-                <th>Datum trke</th>
-                <th>Dužina kruga (km)</th>
-                <th>Broj krugova</th>
-                <th>Tip staze</th>
-                <th>Tip trke</th>
+                <th>Vozač</th>
+                <th>Trka</th>
+                <th>Pozicija</th>
+                <th>Startna pozicija</th>
+                <th>Pređeni krugovi</th>
+                <th>Broj pit stopova</th>
+                <th>Status</th>
                 <th>Detalji</th>
               </tr>
             </thead>
@@ -64,14 +63,13 @@
   <template id="template">
     <tr>
       <td class="id"></td>
-      <td class="name"></td>
-      <td class="location"></td>
-      <td class="country"></td>
-      <td class="raceDate"></td>
-      <td class="lapLengthKm"></td>
-      <td class="lapCount"></td>
-      <td class="trackType"></td>
-      <td class="raceType"></td>
+      <td class="driver"></td>
+      <td class="race"></td>
+      <td class="position"></td>
+      <td class="startingPosition"></td>
+      <td class="lapsCompleted"></td>
+      <td class="pitStops"></td>
+      <td class="status"></td>
       <td><a class="details btn btn-sm btn-outline-danger fw-semibold" href="#">Detalji</a></td>
     </tr>
   </template>
@@ -82,35 +80,28 @@
     const table = document.querySelector('tbody');
     const template = document.getElementById('template');
 
-    function formatDate(dateString) {
-      const options = { year: 'numeric', month: 'short', day: 'numeric', hour: '2-digit', minute: '2-digit' };
-      const date = new Date(dateString);
-      return date.toLocaleDateString('sr-RS', options);
-    }
-
-    axios.get('api/races')
+    axios.get('api/results')
       .then(response => {
-        response.data.forEach(race => {
-          if (race.deletedAt) return;
+        response.data.forEach(result => {
+          if (result.deletedAt) return;
 
           const copy = template.content.cloneNode(true);
 
-          copy.querySelector('.id').innerText = race.id;
-          copy.querySelector('.name').innerText = race.name;
-          copy.querySelector('.location').innerText = race.location;
-          copy.querySelector('.country').innerText = race.country;
-          copy.querySelector('.raceDate').innerText = formatDate(race.raceDate);
-          copy.querySelector('.lapLengthKm').innerText = race.lapLengthKm;
-          copy.querySelector('.lapCount').innerText = race.lapCount;
-          copy.querySelector('.trackType').innerText = race.trackType;
-          copy.querySelector('.raceType').innerText = race.raceType;
-          copy.querySelector('.details').href = `./race-details.html?id=${race.id}`;
+          copy.querySelector('.id').innerText = result.id;
+          copy.querySelector('.driver').innerText = result.driver.firstName + ' ' + result.driver.lastName;
+          copy.querySelector('.race').innerText = result.race.name;
+          copy.querySelector('.position').innerText = result.position;
+          copy.querySelector('.startingPosition').innerText = result.startingPosition;
+          copy.querySelector('.lapsCompleted').innerText = result.lapsCompleted;
+          copy.querySelector('.pitStops').innerText = result.pitStops;
+          copy.querySelector('.status').innerText = result.status;
+          copy.querySelector('.details').href = `./result-details.html?id=${result.id}`;
 
           table.appendChild(copy);
         });
       })
       .catch(err => {
-        console.error('Greška pri učitavanju rasporeda trka:', err);
+        console.error('Greška pri učitavanju rezultata:', err);
       });
   </script>
 </body>
