--- a/public/driver.html
+++ b/public/driver.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Vozaci</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2418/2418779.png" type="image/x-icon" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 
 <body data-bs-theme="dark">
@@ -51,7 +51,6 @@
                 <th>Godina debitovanja</th>
                 <th>Broj titula</th>
                 <th>Tim</th>
-                <th>Detalji</th>
               </tr>
             </thead>
             <tbody></tbody>
@@ -72,7 +71,6 @@
       <td class="debutYear"></td>
       <td class="worldTitles"></td>
       <td class="teamName"></td>
-      <td><a class="details btn btn-sm btn-outline-danger fw-semibold" href="#">Detalji</a></td>
     </tr>
   </template>
 
