--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Raspored trka</title>
+  <title>Timovi</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2418/2418779.png" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 
 <body data-bs-theme="dark">
   <nav class="navbar navbar-expand-lg bg-danger navbar-dark mb-4">
     <div class="container-fluid">
       <a class="navbar-brand text-white" href="/index.html">
-        <img src="https://media.formula1.com/image/upload/f_auto,c_limit,w_285,q_auto/f_auto/q_auto/fom-website/etc/designs/fom-website/images/F1_75_Logo"
-          alt="Logo" width="205" height="24" />
+        <img
+          src="https://media.formula1.com/image/upload/f_auto,c_limit,w_285,q_auto/f_auto/q_auto/fom-website/etc/designs/fom-website/images/F1_75_Logo"
+          alt="Opis slike" width="205" height="24" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,94 +24,71 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-3 fw-bold">
-          <li class="nav-item"><a class="nav-link active text-white" href="/index.html"><i class="fa-solid fa-film me-1"></i> Raspored trka</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-user me-1"></i> Timovi</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/driver.html"><i class="fa-solid fa-calendar-days me-1"></i> Vozači</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/result.html"><i class="fa-solid fa-ticket me-1"></i> Rezultati</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/index.html"><i class="fa-solid fa-film me-1"></i>
+              Raspored trka</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-user me-1"></i>
+              Timovi</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/driver.html"><i
+                class="fa-solid fa-calendar-days me-1"></i> Vozači</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/result.html"><i
+                class="fa-solid fa-ticket me-1"></i> Rezultati</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <div class="container">
-    <h1 class="display-4 fw-bold mb-4 text-center">Raspored trka F1 2025</h1>
 
-    <div class="card shadow">
+ <div class="container">
+  <h1 class="display-4 fw-bold mb-4 text-center">F1 Trke 2025</h1>
+  <div id="racesContainer" class="row g-4 justify-content-center"></div>
+</div>
+
+<template id="race-template">
+  <div class="col-sm-12 col-md-6 col-lg-4">
+    <div class="card text-white bg-dark shadow h-100">
+      <img src="#" class="card-img-top race-img" alt="Race Track Image" />
       <div class="card-body">
-        <div class="table-responsive">
-          <table class="table table-hover table-striped align-middle text-center">
-            <thead class="table-dark">
-              <tr>
-                <th>#</th>
-                <th>Naziv</th>
-                <th>Lokacija</th>
-                <th>Država</th>
-                <th>Datum trke</th>
-                <th>Dužina kruga (km)</th>
-                <th>Broj krugova</th>
-                <th>Tip staze</th>
-                <th>Tip trke</th>
-                <th>Detalji</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
+        <h5 class="card-title race-name"></h5>
+        <p class="mb-1"><strong>Lokacija:</strong> <span class="race-location"></span>, <span class="race-country"></span></p>
+        <p class="mb-1"><strong>Datum:</strong> <span class="race-date"></span></p>
+        <p class="mb-1"><strong>Krugova:</strong> <span class="race-laps"></span> | <strong>Dužina kruga:</strong> <span class="race-length"></span> km</p>
+        <span class="badge rounded-pill text-bg-light track-type"></span>
       </div>
     </div>
   </div>
+</template>
 
-  <template id="template">
-    <tr>
-      <td class="id"></td>
-      <td class="name"></td>
-      <td class="location"></td>
-      <td class="country"></td>
-      <td class="raceDate"></td>
-      <td class="lapLengthKm"></td>
-      <td class="lapCount"></td>
-      <td class="trackType"></td>
-      <td class="raceType"></td>
-      <td><a class="details btn btn-sm btn-outline-danger fw-semibold" href="#">Detalji</a></td>
-    </tr>
-  </template>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script>
-    const table = document.querySelector('tbody');
-    const template = document.getElementById('template');
+    const template = document.getElementById('team-template');
+    const container = document.getElementById('teamsContainer');
+    const raceTemplate = document.getElementById('race-template');
+const raceContainer = document.getElementById('racesContainer');
 
-    function formatDate(dateString) {
-      const options = { year: 'numeric', month: 'short', day: 'numeric', hour: '2-digit', minute: '2-digit' };
-      const date = new Date(dateString);
-      return date.toLocaleDateString('sr-RS', options);
-    }
+axios.get('/api/races')
+  .then(rsp => {
+    const races = rsp.data;
 
-    axios.get('api/races')
-      .then(response => {
-        response.data.forEach(race => {
-          if (race.deletedAt) return;
+    races.forEach(race => {
+      const copy = raceTemplate.content.cloneNode(true);
 
-          const copy = template.content.cloneNode(true);
+      copy.querySelector('.race-img').src = race.racePicture;
+      copy.querySelector('.race-name').innerText = race.name;
+      copy.querySelector('.race-location').innerText = race.location;
+      copy.querySelector('.race-country').innerText = race.country;
+      copy.querySelector('.race-date').innerText = new Date(race.raceDate).toLocaleDateString('sr-RS');
+      copy.querySelector('.race-laps').innerText = race.lapCount;
+      copy.querySelector('.race-length').innerText = race.lapLengthKm;
+      copy.querySelector('.track-type').innerText = race.trackType;
 
-          copy.querySelector('.id').innerText = race.id;
-          copy.querySelector('.name').innerText = race.name;
-          copy.querySelector('.location').innerText = race.location;
-          copy.querySelector('.country').innerText = race.country;
-          copy.querySelector('.raceDate').innerText = formatDate(race.raceDate);
-          copy.querySelector('.lapLengthKm').innerText = race.lapLengthKm;
-          copy.querySelector('.lapCount').innerText = race.lapCount;
-          copy.querySelector('.trackType').innerText = race.trackType;
-          copy.querySelector('.raceType').innerText = race.raceType;
-          copy.querySelector('.details').href = `./race-details.html?id=${race.id}`;
-
-          table.appendChild(copy);
-        });
-      })
-      .catch(err => {
-        console.error('Greška pri učitavanju rasporeda trka:', err);
-      });
+      raceContainer.appendChild(copy);
+    });
+  })
+  .catch(err => {
+    console.error("Greška pri učitavanju trka: ", err);
+  });
   </script>
 </body>
 
