--- a/public/result.html
+++ b/public/result.html
@@ -6,15 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rezultati trka</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2418/2418779.png" type="image/x-icon" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 
 <body data-bs-theme="dark">
   <nav class="navbar navbar-expand-lg bg-danger navbar-dark mb-4">
     <div class="container-fluid">
       <a class="navbar-brand text-white" href="/index.html">
-        <img src="https://media.formula1.com/image/upload/f_auto,c_limit,w_285,q_auto/f_auto/q_auto/fom-website/etc/designs/fom-website/images/F1_75_Logo"
+        <img
+          src="https://media.formula1.com/image/upload/f_auto,c_limit,w_285,q_auto/f_auto/q_auto/fom-website/etc/designs/fom-website/images/F1_75_Logo"
           alt="Logo" width="205" height="24" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -24,10 +25,14 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-3 fw-bold">
-          <li class="nav-item"><a class="nav-link text-white" href="/index.html"><i class="fa-solid fa-film me-1"></i> Raspored trka</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-user me-1"></i> Timovi</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/driver.html"><i class="fa-solid fa-calendar-days me-1"></i> Vozači</a></li>
-          <li class="nav-item"><a class="nav-link active text-white" href="/result.html"><i class="fa-solid fa-ticket me-1"></i> Rezultati</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/index.html"><i class="fa-solid fa-film me-1"></i>
+              Raspored trka</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-user me-1"></i>
+              Timovi</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/driver.html"><i
+                class="fa-solid fa-calendar-days me-1"></i> Vozači</a></li>
+          <li class="nav-item"><a class="nav-link active text-white" href="/result.html"><i
+                class="fa-solid fa-ticket me-1"></i> Rezultati</a></li>
         </ul>
       </div>
     </div>
@@ -50,7 +55,6 @@
                 <th>Pređeni krugovi</th>
                 <th>Broj pit stopova</th>
                 <th>Status</th>
-                <th>Detalji</th>
               </tr>
             </thead>
             <tbody></tbody>
@@ -70,7 +74,6 @@
       <td class="lapsCompleted"></td>
       <td class="pitStops"></td>
       <td class="status"></td>
-      <td><a class="details btn btn-sm btn-outline-danger fw-semibold" href="#">Detalji</a></td>
     </tr>
   </template>
 
@@ -95,7 +98,6 @@
           copy.querySelector('.lapsCompleted').innerText = result.lapsCompleted;
           copy.querySelector('.pitStops').innerText = result.pitStops;
           copy.querySelector('.status').innerText = result.status;
-          copy.querySelector('.details').href = `./result-details.html?id=${result.id}`;
 
           table.appendChild(copy);
         });
