--- a/public/driver.html
+++ b/public/driver.html
@@ -6,15 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Vozaci</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2418/2418779.png" type="image/x-icon" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body data-bs-theme="dark">
   <nav class="navbar navbar-expand-lg bg-danger navbar-dark mb-4">
     <div class="container-fluid">
       <a class="navbar-brand text-white" href="/index.html">
-        <img src="https://media.formula1.com/image/upload/f_auto,c_limit,w_285,q_auto/f_auto/q_auto/fom-website/etc/designs/fom-website/images/F1_75_Logo"
+        <img
+          src="https://media.formula1.com/image/upload/f_auto,c_limit,w_285,q_auto/f_auto/q_auto/fom-website/etc/designs/fom-website/images/F1_75_Logo"
           alt="Logo" width="205" height="24" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -24,10 +28,14 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-3 fw-bold">
-          <li class="nav-item"><a class="nav-link text-white" href="/index.html"><i class="fa-solid fa-film me-1"></i> Raspored trka</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-user me-1"></i> Timovi</a></li>
-          <li class="nav-item"><a class="nav-link active text-white" href="/driver.html"><i class="fa-solid fa-calendar-days me-1"></i> Vozači</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/result.html"><i class="fa-solid fa-ticket me-1"></i> Rezultati</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/index.html"><i class="fa-solid fa-film me-1"></i>
+              Raspored trka</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-user me-1"></i>
+              Timovi</a></li>
+          <li class="nav-item"><a class="nav-link active text-white" href="/driver.html"><i
+                class="fa-solid fa-user me-1"></i> Vozači</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/result.html"><i
+                class="fa-solid fa-ticket me-1"></i> Rezultati</a></li>
         </ul>
       </div>
     </div>
@@ -51,6 +59,10 @@
                 <th>Godina debitovanja</th>
                 <th>Broj titula</th>
                 <th>Tim</th>
+                <th scope="col">
+                  <i class="fa-solid fa-circle-info"></i> Opcije
+                </th>
+
               </tr>
             </thead>
             <tbody></tbody>
@@ -71,6 +83,16 @@
       <td class="debutYear"></td>
       <td class="worldTitles"></td>
       <td class="teamName"></td>
+      <td>
+        <div class="btn-group">
+          <a href="#" class="btn btn-sm btn-success edit" title="Izmeni">
+            <i class="fa-solid fa-pen-to-square"></i>
+          </a>
+          <button type="button" class="btn btn-sm btn-danger remove" title="Obriši">
+            <i class="fa-solid fa-trash-can"></i>
+          </button>
+        </div>
+      </td>
     </tr>
   </template>
 
@@ -83,7 +105,7 @@
     axios.get('api/drivers')
       .then(response => {
         response.data.forEach(driver => {
-          if (driver.deletedAt) return; 
+          if (driver.deletedAt) return;
 
           const copy = template.content.cloneNode(true);
 
@@ -96,6 +118,14 @@
           copy.querySelector('.debutYear').innerText = driver.debutYear;
           copy.querySelector('.worldTitles').innerText = driver.worldTitles;
           copy.querySelector('.teamName').innerText = driver.team?.name;
+          copy.querySelector('.edit').href = '/edit/driver.html?Id=' + driver.id;
+          copy.querySelector('.remove').addEventListener('click', () => {
+            if (!confirm(`Da li sigurno želite da obrišete ${driver.firstName} ${driver.lastName}?`)) return
+            axios.request({
+              url: `/api/drivers/${driver.id}`,
+              method: 'delete'
+            }).then(rsp => window.location.reload())
+          })
           table.appendChild(copy);
         });
       })
