--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Timovi</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2418/2418779.png" type="image/x-icon" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body data-bs-theme="dark">
   <nav class="navbar navbar-expand-lg bg-danger navbar-dark mb-4">
     <div class="container-fluid">
-      <a class="navbar-brand text-white" href="/index.html">
+      <a class="navbar-brand active text-white" href="/index.html">
         <img
           src="https://media.formula1.com/image/upload/f_auto,c_limit,w_285,q_auto/f_auto/q_auto/fom-website/etc/designs/fom-website/images/F1_75_Logo"
           alt="Opis slike" width="205" height="24" />
@@ -24,12 +28,13 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-3 fw-bold">
-          <li class="nav-item"><a class="nav-link text-white" href="/index.html"><i class="fa-solid fa-film me-1"></i>
+          <li class="nav-item"><a class="nav-link active text-white" href="/index.html"><i
+                class="fa-solid fa-film me-1"></i>
               Raspored trka</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-user me-1"></i>
               Timovi</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/driver.html"><i
-                class="fa-solid fa-calendar-days me-1"></i> Vozači</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/driver.html"><i class="fa-solid fa-user me-1"></i>
+              Vozači</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="/result.html"><i
                 class="fa-solid fa-ticket me-1"></i> Rezultati</a></li>
         </ul>
@@ -38,25 +43,39 @@
   </nav>
 
 
- <div class="container">
-  <h1 class="display-4 fw-bold mb-4 text-center">F1 Trke 2025</h1>
-  <div id="racesContainer" class="row g-4 justify-content-center"></div>
-</div>
+  <div class="container">
+    <h1 class="display-4 fw-bold mb-4 text-center">F1 Trke 2025</h1>
+    <div id="racesContainer" class="row g-4 justify-content-center"></div>
+  </div>
 
-<template id="race-template">
-  <div class="col-sm-12 col-md-6 col-lg-4">
-    <div class="card text-white bg-dark shadow h-100">
-      <img src="#" class="card-img-top race-img" alt="Race Track Image" />
-      <div class="card-body">
-        <h5 class="card-title race-name"></h5>
-        <p class="mb-1"><strong>Lokacija:</strong> <span class="race-location"></span>, <span class="race-country"></span></p>
-        <p class="mb-1"><strong>Datum:</strong> <span class="race-date"></span></p>
-        <p class="mb-1"><strong>Krugova:</strong> <span class="race-laps"></span> | <strong>Dužina kruga:</strong> <span class="race-length"></span> km</p>
-        <span class="badge rounded-pill text-bg-light track-type"></span>
+  <template id="race-template">
+    <div class="col-sm-12 col-md-6 col-lg-4">
+      <div class="card text-white bg-dark shadow h-100">
+        <img src="#" class="card-img-top race-img" alt="Race Track Image" />
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title race-name"></h5>
+            <p class="mb-1"><strong>Lokacija:</strong> <span class="race-location"></span>, <span
+                class="race-country"></span></p>
+            <p class="mb-1"><strong>Datum:</strong> <span class="race-date"></span></p>
+            <p class="mb-1"><strong>Krugova:</strong> <span class="race-laps"></span> | <strong>Dužina kruga:</strong>
+              <span class="race-length"></span> km
+            </p>
+            <span class="badge rounded-pill text-bg-light track-type text-dark"></span>
+          </div>
+          <div class="d-flex justify-content-end mt-0.3 me-0.3">
+            <a href="#" class="btn btn-sm btn-success me-2 edit" title="Izmeni">
+              <i class="fa-solid fa-pen-to-square"></i>
+            </a>
+            <button type="button" class="btn btn-sm btn-danger remove" title="Obriši">
+              <i class="fa-solid fa-trash-can"></i>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</template>
+  </template>
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -65,30 +84,38 @@
     const template = document.getElementById('team-template');
     const container = document.getElementById('teamsContainer');
     const raceTemplate = document.getElementById('race-template');
-const raceContainer = document.getElementById('racesContainer');
+    const raceContainer = document.getElementById('racesContainer');
 
-axios.get('/api/races')
-  .then(rsp => {
-    const races = rsp.data;
+    axios.get('/api/races')
+      .then(rsp => {
+        const races = rsp.data;
 
-    races.forEach(race => {
-      const copy = raceTemplate.content.cloneNode(true);
+        races.forEach(race => {
+          const copy = raceTemplate.content.cloneNode(true);
 
-      copy.querySelector('.race-img').src = race.racePicture;
-      copy.querySelector('.race-name').innerText = race.name;
-      copy.querySelector('.race-location').innerText = race.location;
-      copy.querySelector('.race-country').innerText = race.country;
-      copy.querySelector('.race-date').innerText = new Date(race.raceDate).toLocaleDateString('sr-RS');
-      copy.querySelector('.race-laps').innerText = race.lapCount;
-      copy.querySelector('.race-length').innerText = race.lapLengthKm;
-      copy.querySelector('.track-type').innerText = race.trackType;
+          copy.querySelector('.race-img').src = race.racePicture;
+          copy.querySelector('.race-name').innerText = race.name;
+          copy.querySelector('.race-location').innerText = race.location;
+          copy.querySelector('.race-country').innerText = race.country;
+          copy.querySelector('.race-date').innerText = new Date(race.raceDate).toLocaleDateString('sr-RS');
+          copy.querySelector('.race-laps').innerText = race.lapCount;
+          copy.querySelector('.race-length').innerText = race.lapLengthKm;
+          copy.querySelector('.track-type').innerText = race.trackType;
+          copy.querySelector('.edit').href = '/edit/race.html?Id=' + race.id;
+          copy.querySelector('.remove').addEventListener('click', () => {
+            if (!confirm(`Da li sigurno želite da obrišete ${race.name}?`)) return
+            axios.request({
+              url: `/api/races/${race.id}`,
+              method: 'delete'
+            }).then(rsp => window.location.reload())
+          })
 
-      raceContainer.appendChild(copy);
-    });
-  })
-  .catch(err => {
-    console.error("Greška pri učitavanju trka: ", err);
-  });
+          raceContainer.appendChild(copy);
+        });
+      })
+      .catch(err => {
+        console.error("Greška pri učitavanju trka: ", err);
+      });
   </script>
 </body>
 
