--- a/public/list.html
+++ b/public/list.html
@@ -5,12 +5,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Timovi</title>
-  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2418/2418779.png" type="image/x-icon" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
+   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2418/2418779.png" type="image/x-icon" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     .team-card {
+      background-color: #212529;
+      transition: background-color 0.2s ease;
       cursor: pointer;
     }
+
+    .team-card:hover {
+      background-color: #343a40;
+    }
+
 
     .drivers-list {
       font-size: 0.9rem;
@@ -50,10 +61,11 @@
         <ul class="navbar-nav ms-3 fw-bold">
           <li class="nav-item"><a class="nav-link text-white" href="/index.html"><i class="fa-solid fa-film me-1"></i>
               Raspored trka</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-user me-1"></i>
+          <li class="nav-item"><a class="nav-link active text-white" href="/list.html"><i
+                class="fa-solid fa-user me-1"></i>
               Timovi</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="/driver.html"><i
-                class="fa-solid fa-calendar-days me-1"></i> Vozači</a></li>
+                class="fa-solid fa-user me-1"></i> Vozači</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="/result.html"><i
                 class="fa-solid fa-ticket me-1"></i> Rezultati</a></li>
         </ul>
@@ -68,7 +80,7 @@
 
   <template id="team-template">
     <div class="col-md-6">
-      <div class="card text-white bg-dark shadow team-card h-100">
+      <div class="card text-white shadow team-card h-100">
         <img src="#" class="card-img-top logo_url" alt="Team Logo" />
         <div class="card-body">
           <h5 class="card-title name"></h5>
@@ -88,10 +100,6 @@
         const teams = rsp.data;
 
         teams.forEach(team => {
-          if (!team.shortName) {
-            console.warn("Preskačem tim bez shortName:", team);
-            return;
-          }
 
           const copy = template.content.cloneNode(true);
           const card = copy.querySelector('.team-card');
