--- a/public/result.html
+++ b/public/result.html
@@ -6,8 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rezultati trka</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2418/2418779.png" type="image/x-icon" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body data-bs-theme="dark">
@@ -29,8 +32,8 @@
               Raspored trka</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="/list.html"><i class="fa-solid fa-user me-1"></i>
               Timovi</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="/driver.html"><i
-                class="fa-solid fa-calendar-days me-1"></i> Vozači</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/driver.html"><i class="fa-solid fa-user me-1"></i>
+              Vozači</a></li>
           <li class="nav-item"><a class="nav-link active text-white" href="/result.html"><i
                 class="fa-solid fa-ticket me-1"></i> Rezultati</a></li>
         </ul>
@@ -55,6 +58,7 @@
                 <th>Pređeni krugovi</th>
                 <th>Broj pit stopova</th>
                 <th>Status</th>
+                <th>Opcije</th>
               </tr>
             </thead>
             <tbody></tbody>
@@ -63,6 +67,7 @@
       </div>
     </div>
   </div>
+
 
   <template id="template">
     <tr>
@@ -74,6 +79,16 @@
       <td class="lapsCompleted"></td>
       <td class="pitStops"></td>
       <td class="status"></td>
+      <td>
+        <div class="btn-group">
+          <a href="#" class="btn btn-sm btn-success edit" title="Izmeni">
+            <i class="fa-solid fa-pen-to-square"></i>
+          </a>
+          <button type="button" class="btn btn-sm btn-danger remove" title="Obriši">
+            <i class="fa-solid fa-trash-can"></i>
+          </button>
+        </div>
+      </td>
     </tr>
   </template>
 
@@ -98,6 +113,14 @@
           copy.querySelector('.lapsCompleted').innerText = result.lapsCompleted;
           copy.querySelector('.pitStops').innerText = result.pitStops;
           copy.querySelector('.status').innerText = result.status;
+          copy.querySelector('.edit').href = '/edit/result.html?Id=' + result.id;
+          copy.querySelector('.remove').addEventListener('click', () => {
+            if (!confirm(`Da li sigurno želite da obrišete rezultat ${result.id}?`)) return
+            axios.request({
+              url: `/api/results/${result.id}`,
+              method: 'delete'
+            }).then(rsp => window.location.reload())
+          })
 
           table.appendChild(copy);
         });
