--- a/public/list.html
+++ b/public/list.html
@@ -75,8 +75,11 @@
 
   <div class="container">
     <h1 class="display-4 fw-bold mb-4 text-center">F1 Timovi 2025</h1>
+    <a href="/new/team.html" class="btn btn-primary mb-3">+ Dodaj Tim</a>
     <div id="teamsContainer" class="row g-4 justify-content-center"></div>
+
   </div>
+  
 
   <template id="team-template">
     <div class="col-md-6">
