--- a/public/driver.html
+++ b/public/driver.html
@@ -43,6 +43,7 @@
 
   <div class="container">
     <h1 class="display-4 fw-bold mb-4 text-center">Vozači F1 2025</h1>
+    <a href="/new/driver.html" class="btn btn-primary mb-3">+ Dodaj Vozača</a>
 
     <div class="card shadow">
       <div class="card-body">
@@ -118,7 +119,7 @@
           copy.querySelector('.debutYear').innerText = driver.debutYear;
           copy.querySelector('.worldTitles').innerText = driver.worldTitles;
           copy.querySelector('.teamName').innerText = driver.team?.name;
-          copy.querySelector('.edit').href = '/edit/driver.html?Id=' + driver.id;
+          copy.querySelector('.edit').href = '/edit/driver.html?id=' + driver.id;
           copy.querySelector('.remove').addEventListener('click', () => {
             if (!confirm(`Da li sigurno želite da obrišete ${driver.firstName} ${driver.lastName}?`)) return
             axios.request({
